# bricsctf-2024-finals

./: .gitignore  README.md  check.py
checkers/: requirements.txt
checkers/numbpy/: checker.py  numb_lib.py
checkers/qrsas/: checker.py  qrlib.py
internal/numbpy/: numb.c  numb.h  setup.py
internal/numbpy-frontend/: package-lock.json  package.json
internal/qrsas/dev/: auth-cli.py  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  raw-socket.py
internal/qrsas/external_web/: go.mod  main.go
internal/simple/: CMakeLists.txt  conanfile.txt
internal/simple-frontend/: package-lock.json  package.json
internal/simple-frontend/src/: App.js  ErrorContext.js  api.js  index.js
internal/simple-frontend/src/components/: Auth.js  Notes.js
internal/simple/src/: app.cc  app.h  auth.cc  main.cc  note.cc  sha1.cc  sha1.h  util.cc  util.h
services/mole_vault/: main.go
services/numbpy/: Dockerfile  docker-compose.yml  go.mod  go.sum  requirments.txt  run_python.py
services/numbpy/cmd/numb/: main.go
services/numbpy/internal/models/: models.go
services/numbpy/internal/util/: util.go
services/qrsas/: docker-compose.yml
services/qrsas/authrpc/: Dockerfile  build.gradle  settings.gradle
services/qrsas/conf/pg/: init.sql
services/qrsas/core/: Dockerfile  app.env  package.json
services/simple/: Dockerfile  docker-compose.yml  simple
services/simple/caddy/: Caddyfile
services/simple/front/: asset-manifest.json  index.html
services/simple/postgres/: init-db.sh
sploits/numbpy/: sploit.py  vzlom.py
sploits/qrsas/: ssrf.py
sploits/simple/: sha1.py  sploit.py
(+18 files in other folders)
